--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -17,8 +17,16 @@ jobs:
       with:
         python-version: "3.10"
 
+    # -------- Bandit Scan --------
     - name: Install Bandit
       run: pip install bandit
 
     - name: Run Bandit
-      run: bandit -r src/ || true
+      run: bandit -r src/ -f json -o bandit-report.json || true
+
+    # -------- Semgrep Scan --------
+    - name: Install Semgrep
+      run: pip install semgrep
+
+    - name: Run Semgrep
+      run: semgrep --config=auto src/ --json > semgrep-report.json || true
