Add AI analyzer module

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,6 +24,10 @@ jobs:
     - name: Run Bandit
       run: bandit -r src/ -f json -o bandit-report.json 
 
+    - name: Run AI Analyzer
+      run: python ai_analyzer.py
+
+
     # -------- Semgrep Scan --------
     - name: Install Semgrep
       run: pip install semgrep
