--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -18,20 +18,13 @@ jobs:
         python-version: "3.10"
 
     # -------- Bandit Scan --------
-    - name: Install Bandit
-      run: pip install bandit
-
-    - name: Run Bandit
-      run: bandit -r src/ -f json -o bandit-report.json 
-
-    - name: Run Bandit
-      run: | pip install bandit bandit -r src/ -f json -o bandit-report.json || true
+    - name: Run Bandit Scan
+      run: |
+        pip install bandit
+        bandit -r src/ -f json -o bandit-report.json || true
 
     # -------- Semgrep Scan --------
-    - name: Install Semgrep
-      run: pip install semgrep
-
-    - name: Run Semgrep
-      run: semgrep --config=auto src/ --json > semgrep-report.json
-
-    
+    - name: Run Semgrep Scan
+      run: |
+        pip install semgrep
+        semgrep --config=auto src/ --json > semgrep-report.json || true
