--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -17,14 +17,19 @@ jobs:
       with:
         python-version: "3.10"
 
-    # -------- Bandit Scan --------
     - name: Run Bandit Scan
       run: |
         pip install bandit
         bandit -r src/ -f json -o bandit-report.json || true
 
-    # -------- Semgrep Scan --------
     - name: Run Semgrep Scan
       run: |
         pip install semgrep
         semgrep --config=auto src/ --json > semgrep-report.json || true
+
+    - name: Run LLM Security Analyzer
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      run: |
+        pip install openai
+        python llm_security_analyzer.py
