--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,7 +1,7 @@
 name: Left Shift Security Scan
 
 on:
-  push:  
+  push:
     branches: ["main"]
 
 jobs:
@@ -19,19 +19,21 @@ jobs:
       with:
         python-version: "3.10"
 
+    - name: Install Dependencies
+      run: |
+        pip install bandit semgrep openai
+
     - name: Run Bandit Scan
       run: |
-        pip install bandit
         bandit -r src/ -f json -o bandit-report.json || true
 
     - name: Run Semgrep Scan
       run: |
-        pip install semgrep
         semgrep --config=auto src/ --json > semgrep-report.json || true
 
     - name: Run LLM Security Analyzer
       env:
         OPEN_AI_API_KEY: ${{ secrets.OPEN_AI_API_KEY }}
       run: |
-        pip install openai
         python llm_security_analyzer.py
+
