--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,4 +1,4 @@
-name: Left Shift Security Scan 
+name: Left Shift Security Scan
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install bandit semgrep openai
+          pip install bandit semgrep
 
       - name: Run Bandit Scan
         run: |
@@ -31,8 +31,6 @@ jobs:
         run: |
           semgrep --config=auto src/ --json > semgrep-report.json || true
 
-      - name: Run LLM Security Analyzer
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      - name: Run Mock LLM Security Analyzer
         run: |
           python llm_security_analyzer.py
